--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
+#hero .btn-login {
+  border: 2px solid #fff;
+  color: #fff;
+}
+
 #hero .btn-services:hover {
   background: #03C4EB;
   border: 2px solid #03C4EB;
