--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
-/*
-  Theme Name: Imperial
-  Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-template/
-  Author: BootstrapMade
-  Author URL: https://bootstrapmade.com
-*/
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+
 body {
   background: #fff;
   color: #666666;
@@ -863,18 +855,49 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /*--------------------------------------------------------------
 # Footer
---------------------------------------------------------------*/
+
 #footer {
   background: #111;
   padding: 30px 0;
   color: #fff;
 }
+--------------------------------------------------------------*/
+#footer {
+  background-color: black;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  color: white;
+
+  padding: 30px 0;
+}
+
 
 #footer .copyright {
   text-align: center;
 }
 
 #footer .credits {
+  padding-top: 10px;
+  text-align: center;
+  font-size: 13px;
+  color: #ccc;
+}
+
+/*************************************************/
+
+#footer1 {
+  background: #111;
+  padding: 30px 0;
+  color: #fff;
+}
+
+#footer1 .copyright {
+  text-align: center;
+}
+
+#footer1 .credits {
   padding-top: 10px;
   text-align: center;
   font-size: 13px;
