--- a/css/style.css
+++ b/css/style.css
@@ -866,7 +866,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #footer {
   background-color: black;
   position: absolute;
-  bottom: 0;
+  bottom: -190px;
   width: 100%;
   height: 50px;
   color: white;
