--- a/css/style.css
+++ b/css/style.css
@@ -904,4 +904,22 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 13px;
   color: #ccc;
 }
+.contenedor{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+
+.co{
+ border:1px solid;
+ width: 200px;
+ height: 35px;
+ font-size: 20px;
+ float: left;
+ text-align: center;
+
+}
 
