--- a/css/style.css
+++ b/css/style.css
@@ -784,11 +784,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Contact Section
 --------------------------------*/
-#contact {
-  background: #f7f7f7;
-  padding: 80px 0;
- 
-}
+
 
 #contact .info {
   color: #333333;
@@ -843,10 +839,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #03C4EB;
+  background: turquoise;
   border: 0;
   padding: 10px 24px;
-  color: #fff;
+  color: #000000;
   transition: 0.4s;
 }
 
